style: fix broken sidenav on small screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -243,3 +243,7 @@ input[type="file"] { display: none; }
 @media only screen and (min-width: 601px) {
     .message-image { width: 100%; height: 16rem; }
 }
+
+.sidenav .user-view {
+    margin-bottom: 3em;
+}
